minor code block text wrapping fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -206,6 +206,7 @@ code {
   box-decoration-break: clone;
   padding: .1rem .3rem .2rem;
   border-radius: .2rem;
+  white-space: pre-wrap;
 }
 
 .l{ /* navbar */
